# personal-site

./: .gitignore  Makefile  deploy.sh  package-lock.json  package.json
blog_api/: Cargo.toml  Makefile  README.md
blog_api/src/: main.rs
cdk/: package-lock.json  package.json
cdk/lib/: cdk-stack.ts
site/: README.md  package-lock.json  package.json
site/public/: 404.html  global.css
site/src/: App.svelte  Projects.svelte
src/: App.svelte  Blog.svelte  Home.svelte
