[package]
name = "blog_api"
version = "0.1.0"
authors = ["ethanshry <ehshry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.3"
lambda_http = "0.3"
tokio = "1.9"
serde_json = "1.0"
rusoto_core = "0.47"
rusoto_credential = "0.47"
rusoto_dynamodb = "0.47"
openssl = { version = "0.10", features = ["vendored"] }